[ref] Spell check BRP™ Part 1

--- a/report/final/report.tex
+++ b/report/final/report.tex
@@ -9,7 +9,7 @@
 \usepackage{hyperref}
 \usepackage{afterpage}
 \author{Pierre Gerard - Matteo Marra - Bruno Rocha Pereira}
-\title{Given One \\ Intelligent Picture Browser \\ Requirements and Analysis report}
+\title{Given One \\ - \\Intelligent Picture Browser \\  - \\Requirements and Analysis report}
 \date{December 19, 2016}
 
 \begin{document}
@@ -20,25 +20,25 @@
 
 New generation user interfaces are developing day by day, with new tools, devices and different use cases showing up.
 
-Of those devices, Virtual Reality sets are expanding as those devices get more affordable and many research team started working on it. 
+Among those devices, Virtual Reality sets are spreading as they get more affordable and many research teams start working on it. 
 
-Our brainstorming led to us imagining a future where we would use Virtual Reality on common basis, we thought about what an user would like to have and that doesn't exist yet, and how to implement it to make the user feel comfortable in this totally new environment. 
+Our brainstorming led us to imagine a future where we could use Virtual Reality on a common basis. We thought about what an user would like to have which doesn't exist yet, and how to implement it to make the user feel comfortable in this totally new environment.
 
-The system will offer the user a collection of pictures in a Virtual Reality environment, allowing him to browse them intelligently.
+The system will offer the user a collection of pictures in a Virtual Reality environment, allowing him to browse them in a smart way.
 
 \section{Problem to be solved}
 
-Since the numeric revolution, humans tend to take a ton of pictures. It is especially true during their holidays, usually coming back with thousands of pictures. The problem that arise then is that human don't usually have a mean to explore them all other than browsing through them one by one. So, the idea for the project is to create a \textit{Intelligent Picture Browser (IPB)} to fill that void.
+Since the numeric revolution, humans tend to take a ton of pictures. It is especially true during their holidays, usually coming back with thousands of pictures. The problem that arises then is that humans don't usually have a mean to explore them all other than browsing through them one by one. Therefore, the idea for the project is to create a \textit{Intelligent Picture Browser (IPB)} to fill that need.
 
 \section{Requirement Analysis} \label{requi}
 
-The product should browse the user complete gallery of pictures and select a subset of them. The subset selection will be based on a keyword/tag selection. The keyword/tag is automatically linked to pictures by a AI algorithm.
+The product should browse the user's complete gallery of pictures and select a subset of them. The subset selection will be based on a keyword/tag which is automatically bound to pictures by an AI algorithm.
 
-The user will be able to interact with the interface trough the virtual reality set and be able to select tag and some settings via voice.
+The user will be able to interact with the interface through the virtual reality set and be able to select tag and some settings via voice.
 
 \subsection{Data requirements}
 
-The interface should work with any set of pictures in a \textit{jpg} format. However for testing and demonstration purpose, a preloaded set of 300 holiday pictures will be available
+The interface should work with any set of pictures in a \textit{.jpg} format. However, for testing and demonstration purpose, a pre-loaded set of 300 holiday pictures will be available.
 
 \subsection{User characteristics}
 
@@ -46,27 +46,27 @@ The interface will be design to fit almost every individual having the capacity 
 
 \subsection{Usability goals}
 
-The usability of this project is going to be as much as straightforward as possible and will not require any particular skill or educational background. However having a regular access to technologies and computers will be a plus for a smoother use. In brief, it should be easy to learn, efficient and effective.
+The usability of this project is going to be as straightforward as possible and will not require any particular skill or educational background. Nonetheless, having a regular access to technologies and computers will bring smoother use. In brief, it should be easy to learn, efficient and effective.
 % requirement on our ngui in particukar
 
 \subsection{User experience goals}
 
-The main goal is to make the user relive the moment immortalized by the pictures and helping him remember the event and feel the same emotion once again. % user should feel that it is useful enjoyable, engaging and FUN
+The main goal is to make the user experience the moment immortalized by the pictures and allow him to feel the same emotions once again. % user should feel that it is useful enjoyable, engaging and FUN
 
 \section{Design and prototyping}
 
-For the design, implementation and validation of the next generation user interface, we worked in an iterative way.
-The idea was to create multiple evolutionary prototyping. Each prototype was then presented to the class. With such a method, we were able to create a final product on time and validated its usability.
+Concerning the design, implementation and validation of the next generation user interface, we worked in an iterative way.
+The idea was to create multiple evolutionary prototypes. Each prototype was then presented to the class. Thanks to that method, we were able to create a final product on time and validated its usability.
 
 \subsection{Iteration 1 : problem defined}
 
-The first iteration consisted mainly on sitting in a comfortable room and brainstorming about which next-generation interface to design. Many idea had emerged and the one that convince us the most was to innovate in the picture browsing field. Indeed, multiple technologies have recently appears on the market and we though they could be use to enhance usability and user experience of such systems.
-The first and main assumption made on behalf of the user is that the user possess a lot of picture but don't have the time of to browse or sort them all. We want to solve this user's problem.
-The added value of our idea to traditional iterative picture browser was an intelligence which recognize effortlessly the content of user's pictures and immersive way to browse them thanks to new immersive technology known as virtual reality and voice recognition.
+The first iteration consisted mainly in sitting in a comfortable room and brainstorming about which next-generation interface we would design. Many ideas had emerged and the one that convinced us the most was to innovate in the field of picture browsing. Indeed, multiple technologies have recently appears on the market and we though they could be use to enhance usability and user experience of such systems.
+The first and main assumption made on behalf of the user is that the user possesses a lot of picture but doesn't have the time to browse or sort them all, which is what we want to solve.
+The added value of our idea compared to existing picture browsers was an intelligence which recognizes effortlessly the content of the user's pictures and an immersive way to browse through them thanks to new technologies: virtual reality and voice recognition.
 
 \subsection{Iteration 2 : requirements defined}
 
-This iteration was about planning the realization of the idea for the interface and getting the requirements right. We presented the requirements in section \ref{requi}. The planning consisted of a gant chart with a general idea of the timeline we were going to follow for the next 3 months. Of course, due to unpredictable challenges some part got delayed and some moved quicker than expected.
+The second iteration was about planning the realization of the idea for the interface and getting the requirements right. We presented the requirements in the section \ref{requi}. The planning consisted of a Gantt chart with a general idea of the timeline we were going to follow for the next 3 months. Of course, due to unpredictable challenges some parts of it got delayed and some of them were realized quicker than expected.
 
 % insert that gant chart
 \subsection{Iteration 3 : low-fidelity prototype}
