--- a/report/final/report.tex
+++ b/report/final/report.tex
@@ -100,7 +100,7 @@ We also added feedback to the user. When he looks a pictures it gets slightly bi
 
 We also mapped buttons the Vive controller to the up and down movements in the virtual world. We also added the possibility to move the image closer or further by saying the corresponding keywords. 
 
-Finally, we also made the evaluation of the interface presented in \ref{eval}.
+Finally, we also made the evaluation of the interface presented in section \ref{eval}.
 
 \section{Technical : Intelligent Picture Browser}
 The Intelligent Picture Browser is built to work on state of the art technologies, in order to offer to the user a new kind of interaction.
