--- a/report/final/report.tex
+++ b/report/final/report.tex
@@ -298,7 +298,7 @@ Before ending this report, we would really like to thanks the VUB Soft Lab for l
 We also would like to thanks the participant of the evaluation and all that give us feedback during the making of this Next-gen UI.
 
 \section{Conclusion and Future work}
-We proposed IPB, an intelligent 
+We proposed IPB, an intelligent picture browser that allows the user to see pictures corresponding to tags all around him in a VR environment. This was accomplished in several iterations using state-of-the-art technologies. The outcome is fully functional and was tested against different users with different accents to assess their user experience as well as the application usability. Flaws were discovered thanks to the feedback we received and most of them were corrected. However, the application could be, in the future, made easier to learn as well as faster to run.
 
 \end{document}
 
