--- a/report/final/report.tex
+++ b/report/final/report.tex
@@ -294,11 +294,11 @@ The evaluation is a discount evaluation of 3 users using Nielsen Heuristic. Acco
 
 \section{Acknowledgement}
 
-Before ending this report, we would really like to thanks the VUB Soft Lab for lending us the HTC Vive needed for the realization of this project.
-We also would like to thanks the participant of the evaluation and all that give us feedback during the making of this Next-gen UI.
+Before ending this report, we would really like to thank the VUB SOFT Lab for lending us the HTC Vive needed for the realization of this project.
+We also would like to thank the participant of the evaluation that gave us feedback during the making of this Next-gen UI.
 
 \section{Conclusion and Future work}
-We proposed IPB, an intelligent picture browser that allows the user to see pictures corresponding to tags all around him in a VR environment. This was accomplished in several iterations using state-of-the-art technologies. The outcome is fully functional and was tested against different users with different accents to assess their user experience as well as the application usability. Flaws were discovered thanks to the feedback we received and most of them were corrected. However, the application could be, in the future, made easier to learn as well as faster to run.
+We proposed IPB, an intelligent picture browser that allows the user to see pictures corresponding to tags all around him in a VR environment. This was accomplished in several iterations using state-of-the-art technologies. The outcome is fully functional and was tested against different users with different accents to assess their user experience as well as the application usability. The evaluation was mostly positive but flaws were discovered thanks to the feedback we received and most of them were corrected. However, the application could be, in the future, made easier to learn as well as faster to run.
 
 \end{document}
 
